--- a/lib/Makefile.am
+++ b/lib/Makefile.am
@@ -1,10 +1,7 @@
 include $(top_srcdir)/config/include-Makefile.am
 
-noinst_LTLIBRARIES = libmd5.la
-libmd5_la_SOURCES = md5.c
+noinst_LIBRARIES = libmd5.a libenv.a libsetproctitle.a
 
-noinst_LTLIBRARIES += libenv.la
-libenv_la_SOURCES = env.c
-
-noinst_LTLIBRARIES += libsetproctitle.la
-libsetproctitle_la_SOURCES = setproctitle.c
+libmd5_a_SOURCES = md5.c
+libenv_a_SOURCES = env.c
+libsetproctitle_a_SOURCES = setproctitle.c
