--- a/sys-utils/Makefile.am
+++ b/sys-utils/Makefile.am
@@ -2,11 +2,11 @@ include $(top_srcdir)/config/include-Makefile.am
 
 bin_PROGRAMS = dmesg
 
-usrbin_PROGRAMS = cytune flock ipcrm ipcs renice setsid
+usrbinexec_PROGRAMS = cytune flock ipcrm ipcs renice setsid
 
 sbin_PROGRAMS = ctrlaltdel
 
-usrsbin_PROGRAMS = readprofile tunelp
+usrsbinexec_PROGRAMS = readprofile tunelp
 
 man_MANS = flock.1 readprofile.1 \
 	ctrlaltdel.8 cytune.8 dmesg.8 ipcrm.8 ipcs.8 renice.8 \
@@ -19,7 +19,7 @@ if BUILD_RDEV
 
 if INTEL
 
-usrsbin_PROGRAMS += rdev
+usrsbinexec_PROGRAMS += rdev
 man_MANS += rdev.8 ramsize.8 rootflags.8 vidmode.8
 
 install-exec-hook:
