--- a/text-utils/Makefile.am
+++ b/text-utils/Makefile.am
@@ -1,6 +1,6 @@
 include $(top_srcdir)/config/include-Makefile.am
 
-usrbin_PROGRAMS = col colcrt colrm column hexdump rev line tailf
+usrbinexec_PROGRAMS = col colcrt colrm column hexdump rev line tailf
 
 hexdump_SOURCES = hexdump.c conv.c display.c hexsyntax.c odsyntax.c parse.c
 
@@ -8,7 +8,7 @@ man_MANS = col.1 colcrt.1 colrm.1 column.1 hexdump.1 rev.1 line.1 tailf.1
 
 if HAVE_NCURSES
 bin_PROGRAMS = more
-usrbin_PROGRAMS += ul pg
+usrbinexec_PROGRAMS += ul pg
 more_LDADD = -lncurses
 pg_LDADD = -lncurses
 ul_LDADD = -lncurses
