--- a/partx/Makefile.am
+++ b/partx/Makefile.am
@@ -2,7 +2,7 @@ include $(top_srcdir)/config/include-Makefile.am
 
 if BUILD_PARTX
 
-usrsbin_PROGRAMS = addpart delpart partx
+usrsbinexec_PROGRAMS = addpart delpart partx
 partx_SOURCES = bsd.c dos.c partx.c solaris.c unixware.c gpt.c crc32.c
 
 endif
