--- a/schedutils/Makefile.am
+++ b/schedutils/Makefile.am
@@ -2,7 +2,7 @@ include $(top_srcdir)/config/include-Makefile.am
 
 if BUILD_SCHEDUTILS
 
-usrbin_PROGRAMS = chrt ionice taskset
+usrbinexec_PROGRAMS = chrt ionice taskset
 man_MANS = chrt.1 ionice.1 taskset.1
 
 endif
